// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductList > List should render some items 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    items={
        Array [
            Object {
              "completed": false,
              "id": 1,
              "name": "Tomate",
              "price": 3.99,
              "unitType": "kg",
              "units": 1,
            },
            Object {
              "completed": false,
              "id": 2,
              "name": "Cebola",
              "price": 1.99,
              "unitType": "kg",
              "units": 2.3,
            },
            Object {
              "completed": true,
              "id": 3,
              "name": "Alho",
              "price": 4.99,
              "unitType": "kg",
              "units": 0.4,
            },
            Object {
              "completed": false,
              "id": 4,
              "name": "Leite",
              "price": 2.49,
              "unitType": "un",
              "units": 12,
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Item
          completed={false}
          name="Tomate"
          price={3.99}
          unitType="kg"
          units={1}
/>,
        <Item
          completed={false}
          name="Cebola"
          price={1.99}
          unitType="kg"
          units={2.3}
/>,
        <Item
          completed={true}
          name="Alho"
          price={4.99}
          unitType="kg"
          units={0.4}
/>,
        <Item
          completed={false}
          name="Leite"
          price={2.49}
          unitType="un"
          units={12}
/>,
      ],
      "className": "ProductList__list",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "completed": false,
          "name": "Tomate",
          "price": 3.99,
          "unitType": "kg",
          "units": 1,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "completed": false,
          "name": "Cebola",
          "price": 1.99,
          "unitType": "kg",
          "units": 2.3,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "function",
        "props": Object {
          "completed": true,
          "name": "Alho",
          "price": 4.99,
          "unitType": "kg",
          "units": 0.4,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "function",
        "props": Object {
          "completed": false,
          "name": "Leite",
          "price": 2.49,
          "unitType": "un",
          "units": 12,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Item
            completed={false}
            name="Tomate"
            price={3.99}
            unitType="kg"
            units={1}
/>,
          <Item
            completed={false}
            name="Cebola"
            price={1.99}
            unitType="kg"
            units={2.3}
/>,
          <Item
            completed={true}
            name="Alho"
            price={4.99}
            unitType="kg"
            units={0.4}
/>,
          <Item
            completed={false}
            name="Leite"
            price={2.49}
            unitType="un"
            units={12}
/>,
        ],
        "className": "ProductList__list",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "completed": false,
            "name": "Tomate",
            "price": 3.99,
            "unitType": "kg",
            "units": 1,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "completed": false,
            "name": "Cebola",
            "price": 1.99,
            "unitType": "kg",
            "units": 2.3,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "function",
          "props": Object {
            "completed": true,
            "name": "Alho",
            "price": 4.99,
            "unitType": "kg",
            "units": 0.4,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "function",
          "props": Object {
            "completed": false,
            "name": "Leite",
            "price": 2.49,
            "unitType": "un",
            "units": 12,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`ProductList > List should render without crashing 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    items={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [],
      "className": "ProductList__list",
    },
    "ref": null,
    "rendered": Array [],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [],
        "className": "ProductList__list",
      },
      "ref": null,
      "rendered": Array [],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
